Fix GPU CI (#2289)
Summary: Pull Request resolved: https://github.com/pytorch/torchrec/pull/2289

Differential Revision: D61140212

--- a/.github/workflows/unittest_ci.yml
+++ b/.github/workflows/unittest_ci.yml
@@ -192,4 +192,6 @@ jobs:
         conda run -n build_binary \
           python -m pip install pytest
         conda run -n build_binary \
+          pip install -r requirements.txt
+        conda run -n build_binary \
           python -m pytest torchrec -v -s -W ignore::pytest.PytestCollectionWarning --continue-on-collection-errors
