--- a/.github/workflows/unittest_ci.yml
+++ b/.github/workflows/unittest_ci.yml
@@ -95,6 +95,7 @@ jobs:
   # download from GHA, test on gpu
   test_on_gpu:
     runs-on: ${{ matrix.os }}
+    timeout: 15
     strategy:
       matrix:
         os: [linux.g5.12xlarge.nvidia.gpu]
